--- a/index.html
+++ b/index.html
@@ -120,14 +120,16 @@
                     </div>
                 </div>
                 <P style="margin: .5rem;"> download the pdf file and send it to any of our whatsapp(09126711653, 07025558753) or to our instagram @agaperoyalorganics to place your order you will be attended to before any other customer. <br><br>
-                    you can pay to Zenith Bank: Agape Sale Company
+                    you can pay to:<br>
+                    Zenith Bank: Agape Sale Company
                     Account Number: 1220731914
                     <br>
                     or
                     <br>
                     Access Bank: Agape Sale Company LTD
-                    Account Number: 1628203026 <br>
-                    attach your payment recipt with the file pdf also, thanks.
+                    Account Number: 1628203026 <br> <br>
+                    
+                    kindly attach your payment recipt with the file to place your order, thanks.
                     
                 </P>
                 <div class="modal-footer">
