--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
                     <div class="add-product" id="invoiceCover">
                         <form id="productForm" class="productForm">
-                            <div class="form-group">
-                                <p id="stockMessage" style="color: red; font-weight: bold; display: none;">Product not in stock!!! <span style="font-size: 10px;"> you can add this produt to your quote but you cant place an order for it while are work on restocking it </span></p>
+                                <p id="stockMessage" style="color: red; font-weight: bold; display: none;">Product currently not in stock!!!
+                                <span style="font-size: 10px;"> </span></p>
                                 <select id="productName" onchange="updatePrice()" required></select>
-                            </div>
+                
                                 <p class="nariaSign">₦
                                 </p><input id="productPrice" readonly>
                                 <input type="number" id="productQuantity" required placeholder="1pcs" value="1" min="1">
